--- a/estilos/style.css
+++ b/estilos/style.css
@@ -49,3 +49,32 @@ transform: translate(-50%,-50%);
     
 
 }
+
+iframe#tela{
+    position: relative;
+
+    top: 80px;
+    left: 22px;
+    width: 267px;
+    height: 472px;
+    
+}
+section#redes-sociais{
+    text-align: right;
+}
+
+
+section#redes-sociais img{
+
+    width: 50px;
+    margin: 10px;
+
+    border-radius: 50%;
+
+    box-shadow: 2px 2px 5px black;
+    box-sizing: border-box;
+}
+
+section#redes-sociais img:hover{
+    border: 2px solid white;
+}
